[package]
name = "cargo-run-wasm"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
devserver_lib = { version = "0.4.1", default_features = false }
pico-args = "0.4.2"
wasm-bindgen-cli-support = "0.2.78"

[dev-dependencies]
winit = "0.21"
